Fix local calls
